Having a few spacing issues  on the middle elements, checked out solution code and can't figure out the major difference

--- a/level-2/solution/step-2.css
+++ b/level-2/solution/step-2.css
@@ -18,6 +18,7 @@
     height: 200px;
     margin:0 auto 30px;
     background: #DED6D3;
+    display: inline-block;
 }
 
 .large-item {
